--- a/templates/walk.html
+++ b/templates/walk.html
@@ -6,6 +6,18 @@
 
 
 {% block main %}
-<p>Considering the weather in {{weather['location']['name'] }}</p>
-<em>{{ conclusion }}</em>
+<div class='container'>
+  <div class='row'>
+    <div class='col-xs-2'>
+      &nbsp;
+    </div>
+    <div class='col-xs-8'>
+      <p>Considering the weather in {{weather['location']['name'] }}</p>
+      <em>{{ conclusion }}</em>
+    </div>
+    <div class='col-xs-2'>
+      &nbsp;
+    </div>
+  </div>
+</div>
 {% endblock %}
